# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml  setup.cfg
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: FINAL_RESULTS.md  TEST_ANALYSIS_REPORT.md  conftest.py  fix_models.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_fix_verification.py  test_rag_system.py  test_tool_manager.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  format.sh.bak  lint.sh  lint.sh.bak  quality-check.sh  quality-check.sh.bak
